chore: add test-token endpoint to debug 403